--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "NIXPACKS"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "npm run migrate && npm run start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
