--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && esbuild scripts/runMigrations.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/scripts && cp -r migrations dist/",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && cp -r migrations dist/",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "migrate": "node dist/scripts/runMigrations.js"
+    "migrate": "node scripts/migrate.cjs"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.3",
