--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,20 @@ PORT=5000
 NODE_ENV=production
 APP_URL=https://www.roomroute.org
 
+# Google OAuth (Optional)
+# To enable Google Sign-In, follow these steps:
+# 1. Go to https://console.cloud.google.com/
+# 2. Create a new project or select an existing one
+# 3. Enable Google+ API
+# 4. Go to "Credentials" and create "OAuth 2.0 Client ID"
+# 5. Set Authorized JavaScript origins: http://localhost:5000, https://www.roomroute.org
+# 6. Set Authorized redirect URIs:
+#    - http://localhost:5000/api/auth/google/callback
+#    - https://www.roomroute.org/api/auth/google/callback
+# 7. Copy the Client ID and Client Secret below
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
 # Replit Auth (deprecated - kept for reference)
 REPL_ID=your-repl-id
 ISSUER_URL=https://replit.com/oidc
